using list.get(list.size()-1)); to find the last input works whereas last solution worked but wasnt right for this challenge.