@@ -12,7 +12,7 @@ public class FirstAndLast {
             String input = scanner.nextLine();
             if (input.equals("")) {
                 System.out.println(list.get(0));
-                System.out.println(list.getLast());
+                System.out.println(list.get(list.size()-1));
                 break;
             }
 
